single-project:bugfix: do not distort featured image

--- a/content/themes/pitaveri/sass/pages/_single-project.scss
+++ b/content/themes/pitaveri/sass/pages/_single-project.scss
@@ -106,15 +106,9 @@
             right: 0;
             bottom: 0;
             height: 100%;
-            min-width: 100%;
-            width: auto;
-            max-width: none;
-            @include translateX(-25%);
         }
 
         @include breakpoint($breakpoint-s) {
-            object-fit: cover;
-            object-position: 0;
             margin-top: 0;
             padding-left: 0;
             border: 0;
@@ -122,6 +116,8 @@
 
             img {
                 @include translateX(0);
+                object-fit: cover;
+                object-position: 0;
             }
         }
     }
